fix: jd/css/jd_form.css: wrong position of button of getting verification code

--- a/jd/css/jd_form.css
+++ b/jd/css/jd_form.css
@@ -51,3 +51,7 @@ ul {
 #userDiv {
 	letter-spacing: 11px;
 }
+
+#vcInput {
+	width: 150px;
+}
